--- a/Sockets/TDs/TD3/TD3_ServeurTCP/serveurwidget.ui
+++ b/Sockets/TDs/TD3/TD3_ServeurTCP/serveurwidget.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>ServeurWidget</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -35,7 +35,17 @@
          </widget>
         </item>
         <item>
-         <widget class="QSpinBox" name="spinBoxPort"/>
+         <widget class="QSpinBox" name="spinBoxPort">
+          <property name="maximum">
+           <number>9999</number>
+          </property>
+          <property name="value">
+           <number>1025</number>
+          </property>
+          <property name="displayIntegerBase">
+           <number>10</number>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
