--- a/ProjetQT_Prepa_E5.2/Test_MC_USB202/widgetusb2020.ui
+++ b/ProjetQT_Prepa_E5.2/Test_MC_USB202/widgetusb2020.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>WidgetUSB2020</string>
   </property>
-  <widget class="QPushButton" name="ButtonQuitter">
+  <widget class="QPushButton" name="pushButton_Quitter">
    <property name="geometry">
     <rect>
      <x>280</x>
@@ -26,7 +26,7 @@
     <string>Quitter</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>80</x>
